test/expected/operator_after_command.out
shit: 2:8: error: Expected a command after an operator.
     2 |  true ||
       |         ^~ here.
